<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Popular Movies</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="action_settings">Settings</string>
    <string name="action_popular_movies">Most Popular</string>
    <string name="action_top_rated_movies">Top Rated Movies</string>
    <string name="action_favorite_movies">My Favorite Movies</string>
    <string name="date_format">
        <xliff:g id="date_format">
            yyyy-MM-dd
        </xliff:g>
    </string>
    <string name="detail_movie_poster">Movie Poster</string>
    <string name="error_not_connected">Unable to retrieve movie data, please make sure you are
        connected
    </string>
    <string name="tmdb_image_base_path">
        <xliff:g id="tmdb_base_url">
            http://image.tmdb.org/t/p/w342/%s
        </xliff:g>
    </string>

    <string name="tmdb_api_base_url">
        <xliff:g id="tmdb_api_base_url">
            https://api.themoviedb.org/3/movie/?
        </xliff:g>
    </string>

    <string name="detail_title_trailers">Trailers</string>


    <string name="max_rating"><xliff:g id="rating">%1.1f</xliff:g>/10
    </string>

    <string name="min">
        <xliff:g id="min">%d</xliff:g>
        min
    </string>

    <string name="youtube_web">
        <xliff:g id="youtube_web">http://www.youtube.com/watch?v=%s</xliff:g>
    </string>
    <string name="youtube_app">
        <xliff:g id="youtube_app">vnd.youtube:%s</xliff:g>
    </string>

    <string name="dateToYear">
        <xliff:g id="dateToYear">%1$tY</xliff:g>
    </string>

    <string name="myDateFormat">
        <xliff:g id="myDateFormat">%1$td/%1$tm/%1$tY</xliff:g>
    </string>

    <string name="content_authority">
        <xliff:g id="contentAuthority">udacity.nanodegree.android.p2</xliff:g>
    </string>
    <string name="detail_title_user_reviews">User Reviews</string>
    <string name="author">Author:</string>

    <string name="title_activity_detail">Movie Detail</string>
    <string name="msg_movies_not_online">You are not online, showing favorite movies.</string>
    <string name="msg_movies_dont_have_favorite_movies_yet">You do not have any favorite movies
        yet!
    </string>



</resources>
