<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:id="@+id/group_sort_order"
        android:checkableBehavior="none">

        <item
            android:id="@+id/action_popular_movies"
            android:checked="true"
            android:title="@string/action_popular_movies"
            app:showAsAction="never"/>

        <item
            android:id="@+id/action_top_rated"
            android:title="@string/action_top_rated_movies"
            app:showAsAction="never"/>
        <item
            android:id="@+id/action_favorite_movies"
            android:title="@string/action_favorite_movies"
            app:showAsAction="never"

        />
    </group>

</menu>